src/test/ui/non-exhaustive-pattern-witness.stderr
error[E0004]: non-exhaustive patterns: `Foo { first: false, second: Some([_, _, _, _]) }` not covered
  --> $DIR/non-exhaustive-pattern-witness.rs:19:11: in fn struct_with_a_nested_enum_and_vector
   |
LL |     match (Foo { first: true, second: None }) {
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ pattern `Foo { first: false, second: Some([_, _, _, _]) }` not covered

error[E0004]: non-exhaustive patterns: `Red` not covered
  --> $DIR/non-exhaustive-pattern-witness.rs:35:11: in fn enum_with_single_missing_variant
   |
LL |     match Color::Red {
   |           ^^^^^^^^^^ pattern `Red` not covered

error[E0004]: non-exhaustive patterns: `East`, `South` and `West` not covered
  --> $DIR/non-exhaustive-pattern-witness.rs:47:11: in fn enum_with_multiple_missing_variants
   |
LL |     match Direction::North {
   |           ^^^^^^^^^^^^^^^^ patterns `East`, `South` and `West` not covered

error[E0004]: non-exhaustive patterns: `Second`, `Third`, `Fourth` and 8 more not covered
  --> $DIR/non-exhaustive-pattern-witness.rs:58:11: in fn enum_with_excessive_missing_variants
   |
LL |     match ExcessiveEnum::First {
   |           ^^^^^^^^^^^^^^^^^^^^ patterns `Second`, `Third`, `Fourth` and 8 more not covered

error[E0004]: non-exhaustive patterns: `CustomRGBA { a: true, .. }` not covered
  --> $DIR/non-exhaustive-pattern-witness.rs:66:11: in fn enum_struct_variant
   |
LL |     match Color::Red {
   |           ^^^^^^^^^^ pattern `CustomRGBA { a: true, .. }` not covered

error[E0004]: non-exhaustive patterns: `[Second(true), Second(false)]` not covered
  --> $DIR/non-exhaustive-pattern-witness.rs:82:11: in fn vectors_with_nested_enums
   |
LL |     match *x {
   |           ^^ pattern `[Second(true), Second(false)]` not covered

error[E0004]: non-exhaustive patterns: `((), false)` not covered
  --> $DIR/non-exhaustive-pattern-witness.rs:95:11: in fn missing_nil
   |
LL |     match ((), false) {
   |           ^^^^^^^^^^^ pattern `((), false)` not covered

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0004`.
